--- a/Week_4/Assignment/package.json
+++ b/Week_4/Assignment/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "week_3",
+  "name": "assignment",
   "version": "1.0.0",
-  "main": "Assignment/app.js",
+  "main": "app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon jwt.js"
+    "devStart": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
-    "zod": "^3.25.42"
+    "mongoose": "^8.16.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
